Adding template edit

--- a/register/index.html
+++ b/register/index.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>CoreUI - Vue Open Source Bootstrap Admin Template</title><script async src="https://www.googletagmanager.com/gtag/js?id=UA-118965717-3"></script><script src="https://www.google.com/recaptcha/api.js?render=6Le1YnEUAAAAAL0o5kOVcKT8IPmEwdofEyk5zaUn"></script><script>window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+<!DOCTYPE html><html><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=/favicon.ico><title>Altamente Registration</title><script async src="https://www.googletagmanager.com/gtag/js?id=UA-118965717-3"></script><script src="https://www.google.com/recaptcha/api.js?render=6Le1YnEUAAAAAL0o5kOVcKT8IPmEwdofEyk5zaUn"></script><script>window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
     // Shared ID
     gtag('config', 'UA-118965717-3');
