--- a/assets/icons-reference.html
+++ b/assets/icons-reference.html
@@ -47,6 +47,10 @@
           <div class="icon icon-tags"></div>
           <input type="text" readonly="readonly" value="tags">
         </li>
+        <li>
+          <div class="icon icon-spider-web"></div>
+          <input type="text" readonly="readonly" value="spider-web">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -81,6 +85,10 @@
         <li>
           <div data-icon="h" class="icon"></div>
           <input type="text" readonly="readonly" value="h">
+        </li>
+        <li>
+          <div data-icon="i" class="icon"></div>
+          <input type="text" readonly="readonly" value="i">
         </li>
       </ul>
     </div>
